--- a/index.html
+++ b/index.html
@@ -194,6 +194,5 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=EikwovVxvQmt7hb2UTBpy3kmwsKvb072ZIGwpkajf9g&cl=ffffff&w=a"></script>
-	</body>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=bab6b6&w=a&t=t&d=EikwovVxvQmt7hb2UTBpy3kmwsKvb072ZIGwpkajf9g&co=4d64d3'></script>	</body>
 </html>
