--- a/index.html
+++ b/index.html
@@ -195,5 +195,5 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 </body>
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=bab6b6&w=a&t=t&d=EikwovVxvQmt7hb2UTBpy3kmwsKvb072ZIGwpkajf9g&co=4d64d3'></script>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=a&t=tt&d=EikwovVxvQmt7hb2UTBpy3kmwsKvb072ZIGwpkajf9g&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
 </html>
