--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/banner_2.jpg" alt="" />
 								</div>
 								<div class="container">
 									<!--header class="major">
@@ -57,7 +57,7 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
 										<a href="mailto: s.bhosale@surrey.ac.uk" class="image"><img src="images/mail_logo.png" width="50" height="50"/><span class="label"></span></a>&nbsp; &nbsp;
-										<a href="upload/Bhosale_Swapnil_CV_0922.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
+										<a href="upload/Bhosale_Swapnil_CV_1022.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
 									</p>
 								</div>
 							</section>
