--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<header>
 					<span class="image avatar"><img src="images/SwapnilBhosale.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Swapnil Bhosale</a></h1><br>
+					<h6>English approximation: <br> /Swup-Nil/ /Bho-slay/</h6>
 					<p>PhD Student <br> Vision, Speech, Signal Processing</p>
 				</header>
 				<nav id="nav">
