--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 									(A complete list of my publications is available <a target="_blank" href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao">here</a>).
 									</p>
+									<p>
+										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10096526">A Novel Metric For Evaluating Audio Caption Similarity</a></b>
+										<br/>
+										<b>Bhosale, Swapnil</b>, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
+										<br/>
+										<i>IEEE ICASSP (2023)</i>
+										<br/>
+									</p>
 																		<p>
 										<b><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1746809421008867">Calibration Free Meta learning based approach for Subject Independent EEG Emotion Recognition</a></b>
 										<br/>
@@ -93,7 +101,7 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9414845">Deep Lung Auscultation using Acoustic biomarkers for Abnormal Respiratory Sound Event Detection</a></b>
 										<br/>
-										Upasana Tiwari*, <b>Bhosale, Swapnil*</b>, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
+										<b>Bhosale, Swapnil*</b>, Upasana Tiwari*, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>IEEE ICASSP (2021)</i>
 										<br/>
