--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									(A complete list of my publications is available <a target="_blank" href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao">here</a>).
 									</p>
 									<p>
+										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10096526">DiffSED: Sound Event Detection with Denoising Diffusion</a></b>
+										<br/>
+										<br/>
+										<i>AAAI (2024)</i>
+										<br/>
+									</p>
+									<p>
 										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10096526">A Novel Metric For Evaluating Audio Caption Similarity</a></b>
 										<br/>
-										<b>Bhosale, Swapnil</b>, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>IEEE ICASSP (2023)</i>
 										<br/>
@@ -81,7 +87,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 																		<p>
 										<b><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1746809421008867">Calibration Free Meta learning based approach for Subject Independent EEG Emotion Recognition</a></b>
 										<br/>
-										<b>Bhosale, Swapnil</b>, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>Biomedical Signal Processing and Control 72 (2022)</i>
 										<br/>
@@ -91,7 +96,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 																		<p>
 										<b><a target="_blank" href="https://www.isca-speech.org/archive/pdfs/interspeech_2021/bhosale21_interspeech.pdf">Contrastive Learning of Cough Descriptors for Automatic COVID-19 Preliminary Diagnosis</a></b>
 										<br/>
-										<b>Bhosale, Swapnil*</b>, Upasana Tiwari*, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>Interspeech (2021)</i>
 										<br/>
@@ -101,7 +105,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9414845">Deep Lung Auscultation using Acoustic biomarkers for Abnormal Respiratory Sound Event Detection</a></b>
 										<br/>
-										<b>Bhosale, Swapnil*</b>, Upasana Tiwari*, Rupayan Chakraborty, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>IEEE ICASSP (2021)</i>
 										<br/>
@@ -110,7 +113,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9054621">Deep Encoded Linguistic and Acoustic cues for Attention based End-to-End Speech Emotion Recognition</a></b>
 										<br/>
-										<b>Bhosale, Swapnil</b>, Rupayan Chakraborty, Sunil Kumar Kopparapu.
 										<br/>
 										<i>IEEE ICASSP (2020)</i>
 										<br/>
@@ -119,7 +121,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 										<b><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230821000206">Automatic Speaker Independent Dysarthric Speech Intelligibility Assessment System</a></b>
 										<br/>
-										Ayush Tripathi, <b>Bhosale, Swapnil</b>, and Sunil Kumar Kopparapu.
 										<br/>
 										<i>Computer Speech and Language 69 (2021)</i>
 										<br/>
@@ -128,7 +129,6 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p>
 										<b><a target="_blank" href="https://www.researchgate.net/profile/Sunil-Kumar-Kopparapu/publication/335828998_End-to-End_Spoken_Language_Understanding_Bootstrapping_in_Low_Resource_Scenarios/links/5e56106aa6fdccbeba031773/End-to-End-Spoken-Language-Understanding-Bootstrapping-in-Low-Resource-Scenarios.pdf">End-to-End Spoken Language Understanding: Bootstrapping in Low Resource Scenarios</a></b>
 										<br/>
-										<b>Bhosale, Swapnil</b>, Sri Harsha Dumpala, Imran Sheikh and Sunil Kumar Kopparapu.
 										<br/>
 										<i>Interspeech (2019)</i>
 										<br/>
