--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									(A complete list of my publications is available <a target="_blank" href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao">here</a>).
 									</p>
 									<p>
-										<b><a target="_blank" href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10096526">DiffSED: Sound Event Detection with Denoising Diffusion</a></b>
+										<b><a target="_blank" href="https://arxiv.org/pdf/2308.07293.pdf">DiffSED: Sound Event Detection with Denoising Diffusion</a></b>
 										<br/>
 										<i>AAAI (2024)</i>
 										<br/>
