--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
 										<a href="mailto: s.bhosale@surrey.ac.uk" class="image"><img src="images/mail_logo.png" width="50" height="50"/><span class="label"></span></a>&nbsp; &nbsp;
-										<a href="upload/Bhosale_Swapnil_CV_1223.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
+										<a href="upload/Swapnil_CV_0124.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
 									</p>
 								</div>
 							</section>
