--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@ My primary research interest is Multimodal Deep Learning, within vision and lang
 									(A complete list of my publications is available <a target="_blank" href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao">here</a>).
 									</p>
 									<p>
+										<b><a target="_blank" href="https://arxiv.org/pdf/2406.08920.pdf">AV-GS: Learning Material and Geometry Aware Priors for Novel View Acoustic Synthesis</a></b>
+										<br/>
+										<i>NeurIPS (2024)</i>
+										<br/>
+									</p>
+									<p>
 										<b><a target="_blank" href="https://arxiv.org/pdf/2308.07293.pdf">DiffSED: Sound Event Detection with Denoising Diffusion</a></b>
 										<br/>
-										<i>AAAI (2024)</i>
+										<i>AAAI [Oral] (2024)</i>
 										<br/>
 									</p>
 									<p>
