--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header-->
-									<p> About </p>
 									<p> I am a PhD student at at the <a target="_blank" href="https://www.surrey.ac.uk/artificial-intelligence">University of Surrey's People-Centred AI Institute</a>. My research lies at the intersection of multimodal deep learning and audio-visual correspondence learning. I work within the <a target="_blank" href="https://surrey-uplab.github.io/"> Universal Perception (UP) Lab </a> under the guidance of <a target="_blank" href="https://www.surrey.ac.uk/people/eddy-zhu">Dr. Xiatian Zhu</a> and <a target="_blank" href="https://www.surrey.ac.uk/people/diptesh-kanojia">Dr. Diptesh Kanojia</a>.
-										<br> Prior to this, I was a Speech and NLP researcher at <a target="_blank" href="https://www.tcs.com/research-and-innovation">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a> and Dr. Rupayan Chakraborty where I worked broadly on audio signal processing methods for solving real-world challenges.</p>
+										<br> Prior to this, I was a Speech and NLP researcher at <a target="_blank" href="https://www.tcs.com/what-we-do/research">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a> and Dr. Rupayan Chakraborty where I worked broadly on audio signal processing methods for solving real-world challenges.</p>
 									
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
