--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Swapnil Bhosale</title>
+		<title>Swapnil Bhosale | PhD Researcher in Audio-visual Correspondence learning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/SwapnilBhosale.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/SwapnilBhosale.jpg" alt="Portrait of Swapnil Bhosale"/></span>
 					<h1 id="logo"><a href="#">Swapnil Bhosale</a></h1><br>
 					<h6>English approximation: <br> /Swup-Nil/ /Bho-slay/</h6>
 					<p>PhD Student <br> Vision, Speech, Signal Processing</p>
@@ -26,11 +26,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/swapb94" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="s.bhosale@surrey.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -52,8 +49,11 @@
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header-->
-									<p> I am a PhD student at at the <a target="_blank" href="https://www.surrey.ac.uk/artificial-intelligence">University of Surrey's People-Centred AI Institute</a>. My research lies at the intersection of multimodal deep learning and audio-visual correspondence learning. I work within the <a target="_blank" href="https://surrey-uplab.github.io/"> Universal Perception (UP) Lab </a> under the guidance of <a target="_blank" href="https://www.surrey.ac.uk/people/eddy-zhu">Dr. Xiatian Zhu</a> and <a target="_blank" href="https://www.surrey.ac.uk/people/diptesh-kanojia">Dr. Diptesh Kanojia</a>.
-										<br> Prior to starting my PhD, I was a speech researcher at <a target="_blank" href="https://www.tcs.com/what-we-do/research">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a> and Dr. Rupayan Chakraborty where I worked broadly on audio signal processing methods for solving real-world challenges.</p>
+									<p> I am a PhD student at the <a target="_blank" href="https://www.surrey.ac.uk/artificial-intelligence">University of Surrey's People-Centred AI Institute</a> specializing in multimodal deep learning, working at the intersection of vision, language, and audio processing. My focus is to leverage foundational AI models to learn audio-visual correspondence and solve real-world challenges. 
+										I work within the <a target="_blank" href="https://surrey-uplab.github.io/"> Universal Perception (UP) Lab </a> under the guidance of <a target="_blank" href="https://www.surrey.ac.uk/people/eddy-zhu">Dr. Xiatian Zhu</a> and <a target="_blank" href="https://www.surrey.ac.uk/people/diptesh-kanojia">Dr. Diptesh Kanojia</a>.
+										<br>
+
+										Prior to starting my PhD, I was a speech researcher at <a target="_blank" href="https://www.tcs.com/what-we-do/research">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a> and Dr. Rupayan Chakraborty where I worked broadly on audio signal processing methods for solving real-world challenges.</p>
 									
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
