--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://github.com/swapb94" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="s.bhosale@surrey.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto: s.bhosale@surrey.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -57,7 +57,6 @@
 									
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
-										<a href="mailto: s.bhosale@surrey.ac.uk" class="image"><img src="images/mail_logo.png" width="50" height="50"/><span class="label"></span></a>&nbsp; &nbsp;
 										<a href="upload/Swapnil_CV_1224.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
 									</p>
 								</div>
