--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 										I work within the <a target="_blank" href="https://surrey-uplab.github.io/"> Universal Perception (UP) Lab </a> under the guidance of <a target="_blank" href="https://www.surrey.ac.uk/people/eddy-zhu">Dr. Xiatian Zhu</a> and <a target="_blank" href="https://www.surrey.ac.uk/people/diptesh-kanojia">Dr. Diptesh Kanojia</a>.
 										<br>
 
-										Prior to starting my PhD, I was a speech researcher at <a target="_blank" href="https://www.tcs.com/what-we-do/research">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a> and Dr. Rupayan Chakraborty where I worked broadly on audio signal processing methods for solving real-world challenges.</p>
+										Before starting my PhD, I worked as a researcher at <a target="_blank" href="https://www.tcs.com/what-we-do/research">TCS-Research, Mumbai</a> under <a target="_blank" href="https://sites.google.com/site/sunilkopparapu/Home">Dr. Sunil Kumar Kopparapu</a>, where I developed cutting-edge solutions in audio event detection, multimodal emotion recognition, and pathological speech processing, contributing to impactful publications and patents in speech and audio signal processing.
+										
+										</p>
 									
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
