--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/SwapnilBhosale.jpg" alt="Portrait of Swapnil Bhosale"/></span>
+					<span class="image avatar"><img src="images/swap.jpg" alt="Portrait of Swapnil Bhosale"/></span>
 					<h1 id="logo"><a href="#">Swapnil Bhosale</a></h1><br>
 					<h6>English approximation: <br> /Swup-Nil/ /Bho-slay/</h6>
 					<p>PhD Student <br> Vision, Speech, Signal Processing</p>
