--- a/index.html
+++ b/index.html
@@ -154,11 +154,25 @@
 																
 									<div class="features">
 										<article>
+											<a href="#work" class="image"><img src="images/meta_rlr.jpg" width="10%" height="10%" alt=""/></a>
+											<div class="inner">
+												<p>
+													Research Scientist Intern,
+													<a target="_blank" href="https://tech.facebook.com/reality-labs/">Meta Reality Labs Research</a>,
+													RLR Audio, Cambridge, UK
+													<br/>
+													<i>2025.03 ~ 2025.09</i>
+													<br/>
+													Real-time sound recognition for smart glasses; encoding acoustic awareness for AI interactions.
+												</p>
+											</div>
+										</article>
+										<article>
 											<a href="#work" class="image"><img src="images/ai-institute-green-logo.jpg" width="10%" height="10%" alt=""/></a>
 											<div class="inner">
 												<p>
 													PhD Researcher,
-													<a target="_blank" href="https://surrey-uplab.github.io/">Universal Perception (UP) lab</a>,
+													<a target="_blank" href="https://x-up-lab.github.io/">Universal Perception (UP) lab</a>,
 													People-Centred AI, University of Surrey, UK
 													<br/>
 													<i>2022.09 ~ Present</i>
@@ -216,3 +230,4 @@
 			<script src="assets/js/main.js"></script>
 </body>
 </html>
+
