--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<p>
 										<b><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230821000206">Automatic Speaker Independent Dysarthric Speech Intelligibility Assessment System</a></b>
 										<br/>
-										<i>Computer Speech and Language 69 (2021)</i>
+										<i>Computer Speech and Language (2021)</i>
 										<br/>
 									</p>
 
@@ -168,7 +168,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#work" class="image"><img src="images/ai-institute-green-logo.jpg" width="10%" height="10%" alt=""/></a>
+											<a href="#work" class="image"><img src="images/pai.jpg" width="10%" height="10%" alt=""/></a>
 											<div class="inner">
 												<p>
 													PhD Researcher,
@@ -182,7 +182,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#work" class="image"><img src="images/tcs-research.jpeg" alt=""/></a>
+											<a href="#work" class="image"><img src="images/tcs_research.jpg" alt=""/></a>
 											<div class="inner">
 												<p>
 													Researcher <br>
@@ -230,4 +230,5 @@
 			<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
