--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									
 									<p style="text-align:center;">
 										<a href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao" class="image"><img src="images/gscholar_logo.png" width="50" height="50"/><span class="label"></span></a> &nbsp; &nbsp;
-										<a href="upload/Swapnil_CV_0925.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
+										<a href="upload/Swapnil_CV_0126.pdf" class="image"><img src="images/CV_logo.png" width="50" height="50"/><span class="label"></span></a>
 										<a href="upload/HypEE_Appendix.pdf" ><span class="label"></span></a>
 									</p>
 								</div>
@@ -71,6 +71,12 @@
 									<h3>Selected Publications</h3>
 									<p>
 									(A complete list of my publications is available <a target="_blank" href="https://scholar.google.com/citations?user=FsO6e24AAAAJ&hl=en&oi=ao">here</a>).
+									</p>
+									<p>
+										<b><a target="_blank" href="https://arxiv.org/pdf/2511.00641">More Than A Shortcut: A Hyperbolic Approach To Early-Exit Networks</a></b>
+										<br/>
+										<i>IEEE ICASSP (2026) - to appear</i>
+										<br/>
 									</p>
 									<p>
 										<b><a target="_blank" href="https://arxiv.org/abs/2403.14203">Unsupervised Audio-Visual Segmentation with Modality Alignment</a></b>
@@ -231,6 +237,7 @@
 			<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
