--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 											<a href="#work" class="image"><img src="images/pai.jpg" width="10%" height="10%" alt=""/></a>
 											<div class="inner">
 												<p>
-													PhD Researcher,
+													PhD,
 													<a target="_blank" href="https://x-up-lab.github.io/">Universal Perception (UP) lab</a>,
 													People-Centred AI, University of Surrey, UK
 													<br/>
@@ -237,6 +237,7 @@
 			<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
